@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2013-03-25 Matt
+	* Changing Region D in DilTrigLogic threshold from 20 --> 18
+	
 2013-03-13 Steve
 	* Tagging SusyNtuple-00-00-52
 
